--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Ex_Files_Rust_EssT_2021/Exercise Files/01_03_anatomy_of_a_rust_program/end/linke
 Ex_Files_Rust_EssT_2021/Exercise Files/01_03_anatomy_of_a_rust_program/end/linkedin training/11_02_generic_methods/begin/generic_methods/Cargo.lock
 Ex_Files_Rust_EssT_2021/Exercise Files/01_03_anatomy_of_a_rust_program/end/linkedin training/11_02_generic_methods/begin/generic_methods/Cargo.toml
 Ex_Files_Rust_EssT_2021/Exercise Files/01_03_anatomy_of_a_rust_program/end/linkedin training/11_02_generic_methods/begin/generic_methods/src/main.rs
+Rust The book/chapter_1/target
